--- a/TranslationReg/Views/LanguagePairs/Card.cshtml
+++ b/TranslationReg/Views/LanguagePairs/Card.cshtml
@@ -3,8 +3,8 @@
     <div class="card-header">
         <p>Языковая пара</p>
         <div>
-            <a class="fa fa-edit card-btn ajaxToggleCard" data-href="/LanguagePairs/EditCard/@Model.Id" style="font-size:36px" data-ajax-update="#languagePair@(Model.Id)"></a>
-            <a class="fa fa-times card-btn deleteBtn" href="/LanguagePairs/Delete/@Model.Id" data-dialog-title="Удаление языковой пары"  style="font-size:36px"></a>
+            <a class="fa fa-edit card-btn ajaxToggleCard" data-href="/LanguagePairs/EditCard/@Model.Id" data-ajax-update="#languagePair@(Model.Id)"></a>
+            <a class="fa fa-times card-btn deleteBtn" href="/LanguagePairs/Delete/@Model.Id" data-dialog-title="Удаление языковой пары"></a>
         </div>
     </div>
     <div class="card-content">
