--- a/TranslationReg/Views/LanguagePairs/EditCard.cshtml
+++ b/TranslationReg/Views/LanguagePairs/EditCard.cshtml
@@ -1,6 +1,4 @@
 ﻿@model TranslationReg.Models.LanguagePairsModel
-
-
 @using (Html.BeginForm(Html.BeginForm("Edit", "LanguagePairs")))
 {
     @Html.AntiForgeryToken()
@@ -9,9 +7,9 @@
     <div class="card card-blue medium-card">
 
         <div class="card-header">
-            <p>Ред. языковую пару</p>
+            <p>Редактировать языковую пару</p>
             <div>
-                <a class="fa fa-arrow-circle-left card-btn" style="font-size:36px" href="/Languages/Cards"></a>
+                <a class="fa fa-arrow-circle-left card-btn" href="/Languages/Cards"></a>
             </div>
         </div>
 
