--- a/TranslationReg/Views/UnitOfMeasure/EditCard.cshtml
+++ b/TranslationReg/Views/UnitOfMeasure/EditCard.cshtml
@@ -1,11 +1,12 @@
-﻿@model TranslationRegistryModel.ProjectStatus
-@using (Html.BeginForm("Create", "ProjectStatuse"))
+﻿@model TranslationRegistryModel.UnitOfMeasure
+@using (Html.BeginForm("Edit", "UnitOfMeasure"))
 {
     @Html.AntiForgeryToken()
-    <div class="card card-blue small-card">
+    @Html.HiddenFor(model => model.Id)
+    <div class="card card-aqua medium-card">
 
-        <div class="card-header">
-            <p>Добавить статус</p>
+        <div class="card-header orange-header">
+            <p>Редактировать единицу измерения</p>
             <div>
                 <a class="fa fa-arrow-circle-left card-btn" href="/Worktypes/Cards"></a>
             </div>
@@ -17,13 +18,6 @@
                 <div class="card-property"><p>Название:</p></div>
                 <div class="card-value">
                     @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", required = "required", autofocus = "autofocus" } })
-                </div>
-            </div>
-
-            <div class="card-row">
-                <div class="card-property"><p>Описание:</p></div>
-                <div class="card-value">
-                    @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
                 </div>
             </div>
 
