--- a/TranslationReg/Views/LanguagePairs/AddCard.cshtml
+++ b/TranslationReg/Views/LanguagePairs/AddCard.cshtml
@@ -8,9 +8,9 @@
     <div class="card card-blue medium-card">
 
         <div class="card-header">
-            <p>Добавить яз. пару</p>
+            <p>Добавить языковую пару</p>
             <div>
-                <a class="fa fa-arrow-circle-left card-btn" style="font-size:36px" href="/Languages/Cards"></a>
+                <a class="fa fa-arrow-circle-left card-btn" href="/Languages/Cards"></a>
             </div>
         </div>
 
@@ -18,7 +18,7 @@
             <div class="card-row">
                 <div class="card-property"><p>Название:</p></div>
                 <div class="card-value">
-                    @Html.EditorFor(model => model.languagePair.Name, new { htmlAttributes = new { @class = "form-control", required = "required" } })
+                    @Html.EditorFor(model => model.languagePair.Name, new { htmlAttributes = new { @class = "form-control", required = "required", autofocus = "autofocus" } })
                 </div>
             </div>
             <div class="card-row">
