--- a/TranslationReg/Views/ProjectStatuse/EditCard.cshtml
+++ b/TranslationReg/Views/ProjectStatuse/EditCard.cshtml
@@ -1,1 +1,41 @@
-﻿
+﻿@model TranslationRegistryModel.ProjectStatus
+@using (Html.BeginForm("Edit", "ProjectStatuse"))
+{
+    @Html.AntiForgeryToken()
+    @Html.HiddenFor(model => model.Id)
+
+    <div class="card card-blue small-card">
+
+        <div class="card-header">
+            <p>Редактировать статус</p>
+            <div>
+                <a class="fa fa-arrow-circle-left card-btn" href="/Worktypes/Cards"></a>
+            </div>
+        </div>
+
+        <div class="card-content">
+
+            <div class="card-row">
+                <div class="card-property"><p>Название:</p></div>
+                <div class="card-value">
+                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", required = "required", autofocus = "autofocus" } })
+                </div>
+            </div>
+
+            <div class="card-row">
+                <div class="card-property"><p>Описание:</p></div>
+                <div class="card-value">
+                    @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control", required = "required" } })
+                </div>
+            </div>
+
+            <div class="card-row">
+                <div class="card-property"></div>
+                <div class="card-value">
+                    <input type="submit" value="Сохранить" class="btn btn-default btn-form form-control" />
+                </div>
+            </div>
+
+        </div>
+    </div>
+}
