--- a/TranslationReg/Views/Shared/_Layout.cshtml
+++ b/TranslationReg/Views/Shared/_Layout.cshtml
@@ -21,7 +21,6 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="/" class="navbar-brand"></a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav main-menu">
@@ -31,7 +30,7 @@
                     <li>@Html.ActionLink("Типы работ", "Index", "WorkTypes")</li>
                     <li>@Html.ActionLink("Языки", "Index", "Languages")</li>
                     <li>@Html.ActionLink("О программе", "About", "Home")</li>
-                    <li>@Html.ActionLink("Картонки", "GetCard", "Projects")</li>
+                    <li>@Html.ActionLink("Проекты", "Cards", "Projects")</li>
                     <li>@Html.ActionLink("Языки", "Cards", "Languages")</li>
                     <li>@Html.ActionLink("Типы работ", "Cards", "WorkTypes")</li>
                 </ul>
