--- a/TranslationReg/Views/WorkTypes/AddCard.cshtml
+++ b/TranslationReg/Views/WorkTypes/AddCard.cshtml
@@ -8,7 +8,7 @@
         <div class="card-header">
             <p>Доб. тип работ</p>
             <div>
-                <a class="fa fa-arrow-circle-left card-btn" style="font-size:36px" href="/Worktypes/Cards"></a>
+                <a class="fa fa-arrow-circle-left card-btn" href="/Worktypes/Cards"></a>
             </div>
         </div>
 
@@ -17,7 +17,7 @@
             <div class="card-row">
                 <div class="card-property"><p>Назв.:</p></div>
                 <div class="card-value">
-                    @Html.EditorFor(model => model.workType.Name, new { htmlAttributes = new { @class = "form-control", required = "required" } })
+                    @Html.EditorFor(model => model.workType.Name, new { htmlAttributes = new { @class = "form-control", required = "required", autofocus = "autofocus" } })
                 </div>
             </div>
 
