--- a/TranslationReg/Views/WorkTypes/EditCard.cshtml
+++ b/TranslationReg/Views/WorkTypes/EditCard.cshtml
@@ -1,5 +1,4 @@
 ﻿@model TranslationReg.Models.WorkTypeModel
-
 @using (Html.BeginForm("Edit", "WorkTypes"))
 {
     @Html.AntiForgeryToken()
@@ -7,9 +6,9 @@
     <div class="card card-orange medium-card">
 
         <div class="card-header orange-header">
-            <p>Доб. тип работ</p>
+            <p>Редактировать тип работ</p>
             <div>
-                <a class="fa fa-arrow-circle-left card-btn" style="font-size:36px" href="/Worktypes/Cards"></a>
+                <a class="fa fa-arrow-circle-left card-btn" href="/Worktypes/Cards"></a>
             </div>
         </div>
 
@@ -18,7 +17,7 @@
             <div class="card-row">
                 <div class="card-property"><p>Назв.:</p></div>
                 <div class="card-value">
-                    @Html.EditorFor(model => model.workType.Name, new { htmlAttributes = new { @class = "form-control", required = "required" } })
+                    @Html.EditorFor(model => model.workType.Name, new { htmlAttributes = new { @class = "form-control", required = "required", autofocus = "autofocus" } })
                 </div>
             </div>
 
