--- a/TranslationReg/Views/Analytics/Filters.cshtml
+++ b/TranslationReg/Views/Analytics/Filters.cshtml
@@ -12,12 +12,12 @@
 
         <div class="form-group">
             @Html.Label("Дата от")
-            <input type="date" name="filters.PeriodFrom" value="@Model.DateFrom" id="dateFrom">
+            <input type="date" name="filters.PeriodFrom" value="@DateTime.Now.ToString("yyyy-MM-dd")" id="dateFrom">
         </div>
 
         <div class="form-group">
             @Html.Label("Дата до")
-            <input type="date" name="filters.PeriodTo" value="@Model.DateTo" id="dateTo">
+            <input type="date" name="filters.PeriodTo" value="@((DateTime.Now - TimeSpan.FromDays(30)).ToString("yyyy-MM-dd"))" id="dateTo">
         </div>
 
         <div class="form-group">
