--- a/TranslationReg/Views/ProjectStatuse/EditCard.cshtml
+++ b/TranslationReg/Views/ProjectStatuse/EditCard.cshtml
@@ -25,7 +25,7 @@
             <div class="card-row">
                 <div class="card-property"><p>Описание:</p></div>
                 <div class="card-value">
-                    @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control", required = "required" } })
+                    @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control"} })
                 </div>
             </div>
 
