--- a/TranslationReg/Views/Documents/Details.cshtml
+++ b/TranslationReg/Views/Documents/Details.cshtml
@@ -6,12 +6,12 @@
         <dd>@Html.Label(Model.Owner.Name)</dd>
 
         <dt>Скачать оргигинал</dt>
-        <dd><a href="@Url.Action("Download", "Documents", new { @filepath = Model.OriginalFile.Path })" class="download-Btn"></a></dd>
+        <dd><a href="@Url.Action("Download", "Documents", new { @filepath = Model.OriginalFile.Path })" class="btn btn-default"></a></dd>
 
         @if (Model.FinalFile != null && !String.IsNullOrWhiteSpace(Model.FinalFile.Path))
         {
             <dt>Скачать перевод</dt>
-            <dd><a href="@Url.Action("Download", "Documents", new { @filepath = Model.FinalFile.Path })" class="download-Btn"></a></dd>
+            <dd><a href="@Url.Action("Download", "Documents", new { @filepath = Model.FinalFile.Path })" class="btn btn-default"></a></dd>
         }
     </dl>
 </div>
