--- a/TranslationReg/Views/Documents/DocAndStages.cshtml
+++ b/TranslationReg/Views/Documents/DocAndStages.cshtml
@@ -10,12 +10,12 @@
         <dd>@Model.WordsNumber</dd>
 
         <dt>Скачать оргигинал</dt>
-        <dd><a href="@Url.Action("Download", "Documents", new { @filepath = Model.OriginalFile.Path })" class="download-Btn">Скачать</a></dd>
+        <dd><a href="@Url.Action("Download", "Documents", new { @filepath = Model.OriginalFile.Path })" class="btn btn-default">Скачать</a></dd>
 
         @if (Model.FinalFile != null)
     {
         <dt>Скачать перевод</dt>
-        <dd><a href="@Url.Action("Download", "Documents", new { @filepath = Model.FinalFile.Path })" class="download-Btn">Скачать</a></dd>
+        <dd><a href="@Url.Action("Download", "Documents", new { @filepath = Model.FinalFile.Path })" class="btn btn-default">Скачать</a></dd>
 }
     </dl>
 
