--- a/TranslationReg/Views/Projects/Cards.cshtml
+++ b/TranslationReg/Views/Projects/Cards.cshtml
@@ -21,6 +21,12 @@
                             <h1 class="sub-title">Создатель: @project.Creator.Name</h1>
                             <h1 class="sub-title">@project.LanguagePair.Name</h1>
                         </div>
+                        <div class="card-info">
+                            <p class="sub-title">Заказчик: @project.Customer</p>
+                        </div>
+                        <div class="card-info">
+                            <p class="sub-title">Статус: @project.ProjectStatus.Name</p>
+                        </div>
                         <p class="description">
                             New York, the largest city in the U.S.
                         </p>
@@ -71,15 +77,7 @@
                         </div>
                         <div class="card-meta">
                             <div class="documents">
-                                @if (@project.Documents.Count == 0 || @project.Documents.Count == 1)
-                                {
-                                    <span><i class="fa fa-list"></i> @project.Documents.Count document</span>
-                                }
-                                else
-                                {
-                                    <span><i class="fa fa-list"></i> @project.Documents.Count documents</span>
-                                }
-
+                                <span><i class="fa fa-list"></i>Документы (@project.Documents.Count)</span>
                                 @if (@project.Documents.Count == 0)
                                 {
                                     <div class="documents-list">
@@ -222,31 +220,36 @@
         box-shadow: 0px 1px 15px 0px rgba(0, 0, 0, 0.3);
     }
 
-        .project-card .card-name .main-title .card-status-light {
-            display: inline-block;
-            width: 15px;
-            height: 15px;
-            border-radius: 50%;
-            background-color: greenyellow;
+        .project-card .card-name {
+            padding: 10px;
+            border-bottom: solid 2px red;
         }
 
-        .project-card .card-name .date {
-            align-self: center;
-            margin-left: 10px;
-            z-index: 1;
-            background: #e74c3c;
-            width: 55px;
-            height: 55px;
-            padding: 5px 0;
-            -webkit-border-radius: 100%;
-            -moz-border-radius: 100%;
-            border-radius: 100%;
-            color: #FFFFFF;
-            font-weight: 700;
-            text-align: center;
-            -moz-box-sizing: border-box;
-            box-sizing: border-box;
-        }
+            .project-card .card-name .main-title .card-status-light {
+                display: inline-block;
+                width: 15px;
+                height: 15px;
+                border-radius: 50%;
+                background-color: greenyellow;
+            }
+
+            .project-card .card-name .date {
+                align-self: center;
+                margin-left: 10px;
+                z-index: 1;
+                background: #e74c3c;
+                width: 55px;
+                height: 55px;
+                padding: 5px 0;
+                -webkit-border-radius: 100%;
+                -moz-border-radius: 100%;
+                border-radius: 100%;
+                color: #FFFFFF;
+                font-weight: 700;
+                text-align: center;
+                -moz-box-sizing: border-box;
+                box-sizing: border-box;
+            }
 
         .project-card .date .day {
             font-size: 16px;
@@ -286,16 +289,16 @@
             margin: 0;
             width: 75%;
             color: #333333;
-            font-size: 26px;
-            font-weight: 700;
+            font-size: 22px;
+            font-weight: 600;
         }
 
         .project-card .sub-title {
             margin: 0;
             padding: 0 0 10px;
             color: #333333;
-            font-size: 20px;
-            font-weight: 700;
+            font-size: 18px;
+            font-weight: 600;
         }
 
         .project-card .proj-card-content .card-info {
@@ -335,6 +338,9 @@
 
                 .project-card .proj-card-content .card-meta .documents:hover .documents-list {
                     display: inline-block;
+                }
+                .project-card .proj-card-content .card-meta .documents .fa{
+                    padding:5px;
                 }
 
                 .project-card .proj-card-content .card-meta .documents .documents-list ul {
