--- a/TranslationReg/Views/Projects/Cards.cshtml
+++ b/TranslationReg/Views/Projects/Cards.cshtml
@@ -28,7 +28,7 @@
                             <p class="sub-title">Статус: @project.ProjectStatus.Name</p>
                         </div>
                         <p class="description">
-                            New York, the largest city in the U.S.
+                            Описание проекта будет выводиться здесь
                         </p>
                         <div class="card-users">
                             <a class="category" href="/Projects/TabPages/@(project.Id)">Открыть</a>
