--- a/TranslationReg/Views/Projects/Index.cshtml
+++ b/TranslationReg/Views/Projects/Index.cshtml
@@ -15,19 +15,16 @@
     <div class="container">
         <ul class="filters">
             <li>
-                <a class="filter filter-active" data-ajax="true" data-ajax-mode="replace" data-ajax-update="#projectList" href="/Projects/All">
-                    Все проекты
-                </a>
+                <a class="filter filter-active" data-ajax="true" data-ajax-mode="replace" data-ajax-update="#projectList" href="/Projects/My">Мои проекты</a>
             </li>
             <li>
-                <a class="filter" data-ajax="true" data-ajax-mode="replace" data-ajax-update="#projectList" href="/Projects/InWork">
-                    Проекты в работе
-                </a>
+                <a class="filter" data-ajax="true" data-ajax-mode="replace" data-ajax-update="#projectList" href="/Projects/InWork">Проекты в работе</a>
             </li>
             <li>
-                <a class="filter" data-ajax="true" data-ajax-mode="replace" data-ajax-update="#projectList" href="/Projects/My">
-                    Мои проекты
-                </a>
+                <a class="filter" data-ajax="true" data-ajax-mode="replace" data-ajax-update="#projectList" href="/Projects/All">Все проекты</a>
+            </li>
+            <li>
+                <a class="filter" data-ajax="true" data-ajax-mode="replace" data-ajax-update="#projectList" href="/Projects/Done">Закрытые проекты</a>
             </li>
         </ul>
     </div>
