--- a/TranslationReg/Views/Documents/Create.cshtml
+++ b/TranslationReg/Views/Documents/Create.cshtml
@@ -7,7 +7,7 @@
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
         @Html.LabelFor(model => model.Document.Name, "Название")
-        @Html.EditorFor(model => model.Document.Name, new { htmlAttributes = new { @class = "form-control", required = "required " } })
+        @Html.EditorFor(model => model.Document.Name, new { htmlAttributes = new { @class = "form-control", required = "required ", id = "fileName" } })
         @Html.ValidationMessageFor(model => model.Document.Name, "", new { @class = "text-danger" })
     </div>
 
@@ -19,7 +19,7 @@
 
     <div class="form-group">
         @Html.Label("Файл оригинала")
-        <input type="file" name="original" required="required" />
+        <input type="file" name="original" required="required"  class="fileNamePicker" />
     </div>
 
     <div class="form-group">
@@ -30,6 +30,14 @@
     <input type="submit" value="Сохранить" class="btn btn-default btn-form" />
 }
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+<script type="text/javascript">
+    $(".fileNamePicker[type=file]").change(function () {
+        if (!$("#fileName").val())
+        {
+            var fullPath = $(this).val();
+            var name = fullPath.replace(/^.*[\\\/]/, '');
+            var withoutExtensionName = name.substr(0, name.indexOf('.'));
+            $("#fileName").val(withoutExtensionName);
+        }
+    });
+</script>
